Edits to Repository, added Services, Mapper, and Unit Test

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ UserManagement/User.Domain/obj/
 UserManagement/User.Infrastructure/bin/
 
 UserManagement/User.Infrastructure/obj/
+
+UserManagement/User.Test/bin/
+
+UserManagement/User.Test/obj/
