--- a/UserManagement/User.API/appsettings.json
+++ b/UserManagement/User.API/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "App": {
+    "Name": "UserManagement",
+    "Author": "Becky Ruan"
+  }
 }
