--- a/UserManagement/User.API/appsettings.json
+++ b/UserManagement/User.API/appsettings.json
@@ -10,5 +10,9 @@
   "App": {
     "Name": "UserManagement",
     "Author": "Becky Ruan"
+  },
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer": "test.com"
   }
 }
