--- a/ProjectManagement/Project.Api/Project.Api.csproj
+++ b/ProjectManagement/Project.Api/Project.Api.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Project.Infrastructure\Project.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
