--- a/ProjectManagement/Project.Api/appsettings.Development.json
+++ b/ProjectManagement/Project.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Services": {
+    "UserManagement": "https://localhost:44363"
   }
 }
