repository updates, Project.Domain services and mappers

--- a/ProjectManagement/Project.Api/Project.Api.csproj
+++ b/ProjectManagement/Project.Api/Project.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Project.Domain\Project.Domain.csproj" />
     <ProjectReference Include="..\Project.Infrastructure\Project.Infrastructure.csproj" />
   </ItemGroup>
 
