--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ ProjectManagement/Project.Domain/obj/
 ProjectManagement/Project.Infrastructure/bin/
 
 ProjectManagement/Project.Infrastructure/obj/
+
+ProjectManagement/Project.Test/bin/
+
+ProjectManagement/Project.Test/obj/
