--- a/ProjectManagement/Project.Api/Project.Api.csproj
+++ b/ProjectManagement/Project.Api/Project.Api.csproj
@@ -9,5 +9,10 @@
     <ProjectReference Include="..\Project.Infrastructure\Project.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
 
 </Project>
