--- a/ProjectTaskManagement/ProjectTask.Domain/ProjectTask.Domain.csproj
+++ b/ProjectTaskManagement/ProjectTask.Domain/ProjectTask.Domain.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Mapper\" />
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\ProjectTask.Infrastructure\ProjectTask.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
