--- a/ProjectTaskManagement/ProjectTask.Api/ProjectTask.Api.csproj
+++ b/ProjectTaskManagement/ProjectTask.Api/ProjectTask.Api.csproj
@@ -8,5 +8,13 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectTask.Domain\ProjectTask.Domain.csproj" />
+  </ItemGroup>
+
 
 </Project>
