--- a/ProjectTaskManagement/ProjectTask.Api/appsettings.Development.json
+++ b/ProjectTaskManagement/ProjectTask.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Services": {
+    "ProjectManagement": "https://localhost:44301"
   }
 }
