--- a/ProjectTaskManagement/ProjectTask.Api/appsettings.Development.json
+++ b/ProjectTaskManagement/ProjectTask.Api/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "Services": {
-    "ProjectManagement": "https://localhost:44301"
+    "ProjectManagement": "https://localhost:44301",
+    "UserManagement": "https://localhost:44363"
   }
 }
