--- a/ProjectManagement/Project.Api/appsettings.Development.json
+++ b/ProjectManagement/Project.Api/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "Services": {
-    "UserManagement": "https://localhost:44363"
+    "UserManagement": "https://localhost:44363",
+    "ProjectTaskManagement": "https://localhost:44326"
   }
 }
